# Croy

./: .gitignore  CMakeLists.txt
App/client/: client.c  helper.c  helper.h  rcClient.c
App/client/inc/: helper.h
App/server/: rcServer.c  server.c
Projeler/Eclipse/appClient/: .cproject  .project
Projeler/Eclipse/appServer/: .cproject  .project
Resources/: capture_ss_bmp.txt
Socket/: EA_Process.c  EA_Socket.c  eaSCKTBasicComProtocols.c  eaSCKTBasicComProtocols.h  esSCKTBaseDef.c  esSCKTBaseDef.h  process.c
Socket/inc/: EA_Process.h  EA_Socket.h  eaSCKTBasicComProtocols.h  esSCKTBaseDef.h  process.h
